--- a/apps/primary-backend/package.json
+++ b/apps/primary-backend/package.json
@@ -6,10 +6,12 @@
     "dev": "tsc -b && node dist/index.js"
   },
   "dependencies": {
+    "@repo/redis": "workspace:*",
     "@repo/typescript-config": "workspace:*",
+    "@types/cors": "^2.8.17",
     "@types/express": "^5.0.1",
-    "express": "^5.1.0",
-    "@repo/redis": "workspace:*"
+    "cors": "^2.8.5",
+    "express": "^5.1.0"
   },
   "keywords": [],
   "author": "",
