added database schema and updated ui

--- a/apps/leetcode-frontend/package.json
+++ b/apps/leetcode-frontend/package.json
@@ -20,7 +20,9 @@
     "@repo/ui": "workspace:*",
     "@tailwindcss/postcss": "^4.1.3",
     "@types/axios": "^0.14.4",
+    "@types/bcrypt": "^5.0.2",
     "axios": "^1.8.4",
+    "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.487.0",
