--- a/apps/primary-backend/package.json
+++ b/apps/primary-backend/package.json
@@ -6,12 +6,16 @@
     "dev": "tsc -b && node dist/index.js"
   },
   "dependencies": {
+    "@repo/common": "workspace:*",
     "@repo/redis": "workspace:*",
     "@repo/typescript-config": "workspace:*",
+    "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.1",
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "@repo/db": "workspace:*"
   },
   "keywords": [],
   "author": "",
